<resources>
    <string name="app_name">MobileModule</string>
    <string name="less">&#60;</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="not">not</string>
    <string name="and">and</string>
    <string name="toStr">to string</string>
    <string name="doubleQuotes">&#34;</string>
    <string name="twoDoubleQuotes">&#34;&#34;</string>
    <string name="cout">output</string>
    <string name="ifBlock">if</string>
    <string name="elseBlock">else</string>
    <string name="whileBlock">while</string>
    <string name="arr">arr</string>
    <string name="swap">swap [</string>
    <string name="andSwap">] and [</string>
    <string name="arrayAssig">arr ind</string>
    <string name="eq">=</string>
    <string name="name">name</string>
    <string name="type">type</string>
    <string name="defVNum">0</string>
    <string name="defVStr">&#34; &#34;</string>
    <string name="defVBool">False</string>
    <string name="typeVNum">int</string>
    <string name="typeVStr">str</string>
    <string name="typeVBool">bool</string>
    <string name="typeVNumArray">int [</string>
    <string name="typeVStrArray">str [</string>
    <string name="typeVBoolArray">bool [</string>
    <string name="openFigure">{</string>
    <string name="closeFigure">}</string>
    <string name="openSquare">[</string>
    <string name="closeSquare">]</string>

    <string name="blocksTitle">BLOCKS</string>
    <string name="funBlocksTitle">fun blocks</string>
    <string name="operTitle">operators</string>
    <string name="stringTitle">string operations</string>
    <string name="mathTitle">math operation</string>
    <string name="logicTitle">logic</string>
    <string name="negTitle">negation</string>
    <string name="valueTitle">constants</string>
    <string name="varTitle">variables</string>
    <string name="arrTitle">arrays</string>

    <string name="main">Int main( )  {</string>
    <string name="intButton">Interpret</string>
    <string name="cBotton">Console</string>
    <string name="buf">Bufer</string>


    <string-array name="types">
        <item>Int</item>
        <item>String</item>
        <item>Boolean</item>
    </string-array>
    <string-array name="mathOperations">
        <item>+</item>
        <item>-</item>
        <item>*</item>
        <item>/</item>
        <item>%</item>
    </string-array>
    <string-array name="logicOperations">
        <item>and</item>
        <item>or</item>
    </string-array>
    <string-array name="ireqOperations">
        <item>&#60;</item>
        <item>&#62;</item>
        <item>&#60;=</item>
        <item>&#62;=</item>
        <item>==</item>
        <item>!=</item>
    </string-array>
    <string-array name="boolValues">
        <item>true</item>
        <item>false</item>
    </string-array>

</resources>