<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:transitionName="while">

    <LinearLayout
        android:id="@+id/ifBlockInPlt"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/marginForBlocks"
        android:gravity="left"
        android:layout_marginTop="@dimen/marginForBlocks"
        android:layout_marginBottom="@dimen/marginForBlocks"
        >
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/marginForBlocks"
            android:gravity="center"
            android:layout_marginTop="@dimen/marginForBlocks"
            android:layout_marginBottom="@dimen/marginForBlocks"
            android:layout_marginLeft="@dimen/marginForBlocks"
            android:layout_marginRight="@dimen/marginForBlocks"
            android:background="@drawable/shape_for_fun_block">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/whileBlock"
                android:textSize="@dimen/textBase"
                android:layout_marginTop="@dimen/marginForBlocks"
                android:layout_marginBottom="@dimen/marginForBlocks"
                android:layout_marginLeft="@dimen/marginForBlocks"
                android:layout_marginRight="@dimen/marginForBlocks"
                android:textColor="@color/white"/>

            <LinearLayout
                android:id="@+id/whileCondOper"
                android:orientation="horizontal"
                android:transitionName="All"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginForBlocks"
                android:layout_marginBottom="@dimen/marginForBlocks"
                android:layout_marginLeft="@dimen/marginForBlocks"
                android:layout_marginRight="@dimen/marginForBlocks"
                android:background="@drawable/shape_for_main_operator_empty"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/openFigure"
                android:textSize="@dimen/textBase"
                android:layout_marginTop="@dimen/marginForBlocks"
                android:layout_marginBottom="@dimen/marginForBlocks"
                android:layout_marginLeft="@dimen/marginForBlocks"
                android:layout_marginRight="@dimen/marginForBlocks"
                android:textColor="@color/white"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/marginForBlocks"
            android:gravity="left"
            android:layout_marginTop="@dimen/marginForBlocks"
            android:layout_marginBottom="@dimen/marginForBlocks"
            android:layout_marginLeft="@dimen/marginForBlocks"
            android:layout_marginRight="@dimen/marginForBlocks"
            android:background="@drawable/shape_for_body"
            >

            <LinearLayout
                android:id="@+id/whileBodyInPlt"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/marginForBlocks"
                android:gravity="left"
                android:layout_marginTop="@dimen/marginForBlocks"
                android:layout_marginBottom="@dimen/marginForBlocks"
                android:layout_marginLeft="@dimen/marginForBlocks"
                android:layout_marginRight="@dimen/marginForBlocks">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="0sp"
                    android:textColor="@color/white"/>
            </LinearLayout>

            <TextView
                android:id="@+id/bodyClose"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/closeFigure"
                android:textSize="@dimen/textBase"
                android:layout_marginTop="@dimen/marginForBlocks"
                android:layout_marginBottom="@dimen/marginForBlocks"
                android:layout_marginLeft="@dimen/marginForBlocks"
                android:layout_marginRight="@dimen/marginForBlocks"
                android:textColor="@color/white"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>